Fixed tech-stack icons on mobile

--- a/assets/css/styleindex.css
+++ b/assets/css/styleindex.css
@@ -161,8 +161,8 @@ body{
     }
 
     .tech-icon {
-        width: 20%;
-        margin: 10px 15%;
+        width: 25%;
+        margin: 10px 12.5%;
     }
 
     #bio-image {
